--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/humanize-duration": "^3.27.1",
-    "ts-node": "^10.8.1"
+    "ts-node": "^10.8.1",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@types/node-fetch": "^2.6.2",
