--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "src"
   ],
   "scripts": {
-    "build": "tsc src/**/*.ts",
+    "build": "tsc",
     "test": "ts-node ./src/test.ts",
     "postinstall": "npm run build",
     "npm-publish": "tsc && npm version patch && npm publish"
